# precursor-othello

./: .gitignore  Cargo.toml  LICENSE  PLAN.md  README.md
libs/othello-core/: Cargo.toml
libs/othello-core/src/: ai.rs  board.rs  eval.rs  game.rs  lib.rs  moves.rs  opening.rs
screenshots/: README.md
src/: app.rs  export.rs  feedback.rs  help.rs  main.rs  menu.rs  review.rs  storage.rs  ui.rs
