[package]
name = "othello"
version = "0.1.0"
authors = ["Tyler Colby"]
edition = "2021"
description = "Tournament-quality Othello game with AI opponent for Precursor"

[dependencies]
# Game engine (local library)
othello-core = { path = "../../libs/othello-core", default-features = false }

# Core Xous
xous = "0.9.69"
xous-ipc = "0.10.9"
log = "0.4.14"
log-server = { package = "xous-api-log", version = "0.1.68" }
xous-names = { package = "xous-api-names", version = "0.9.70" }

# Graphics (access via gam re-exports)
gam = { path = "../../services/gam" }

# Timing
ticktimer-server = { package = "xous-api-ticktimer", version = "0.9.68" }

# Storage
pddb = { path = "../../services/pddb" }

# Hardware (vibration, TRNG)
llio = { path = "../../services/llio" }
trng = { path = "../../services/trng" }

# Enum serialization
num-derive = { version = "0.4.2", default-features = false }
num-traits = { version = "0.2.14", default-features = false }
